; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_vmi_32.c_vmi_update_pte_defer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_vmi_32.c_vmi_update_pte_defer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*, i32)* }
%struct.mm_struct = type { i32 }

@vmi_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@VMI_PAGE_PT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mm_struct*, i64, i32*)* @vmi_update_pte_defer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vmi_update_pte_defer(%struct.mm_struct* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.mm_struct*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store %struct.mm_struct* %0, %struct.mm_struct** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32 (i32*, i32)*, i32 (i32*, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vmi_ops, i32 0, i32 0), align 8
  %8 = load i32*, i32** %6, align 8
  %9 = load %struct.mm_struct*, %struct.mm_struct** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i32, i32* @VMI_PAGE_PT, align 4
  %12 = call i32 @vmi_flags_addr_defer(%struct.mm_struct* %9, i64 %10, i32 %11, i32 0)
  %13 = call i32 %7(i32* %8, i32 %12)
  ret void
}

declare dso_local i32 @vmi_flags_addr_defer(%struct.mm_struct*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
